--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ body {
   transition: transform 0.5s linear;
 }
 
+.container.show-nav .circle {
+ transform: rotate(-70deg);
+} 
+
 .circle button {
   position: absolute;
   top: 50%;
@@ -65,6 +69,11 @@ body {
   transform-origin: top left;
 }
 
+.container.show-nav + nav li {
+  transform: translateX(0);
+  transition-delay: 0.3s;
+}
+
 nav {
   position: fixed;
   bottom: 40px;
@@ -83,6 +92,22 @@ nav ul li {
   margin: 40px 0;
   transform: translateX(-100%);
   transition: transform 0.4s ease-in;
+}
+
+nav ul li i {
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+/* Here the li's after the first li will stick out 15px to the left */
+nav ul li + li {
+  margin-left: 15px;
+  transform: translateX(-150%);
+}
+
+nav ul li + li + li {
+  margin-left: 30px;
+  transform: translateX(-200%);
 }
 
 .content img {
